# orchid_env

./: .dockerignore  .gitignore  GAME_PLAN.md  README.md  __init__.py  app.py  cheatcode_orchid_env.py  client.py  inference.py  inference_remote.py  models.py  notebook.md  openenv.yaml  pyproject.toml  pyrightconfig.json  reference_steps_for_proper_grading_in_task_classes.py  test_gemini_agent.py  test_huggingface_agent.py
openenv_orchid_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  graders.py  legacy_codebase.py  orchid_env_environment.py  physics_questions.json  sandbox_controller.py
tests/: test_daytona.py
