# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-orchid_env"
version = "0.1.0"
description = "Orchid Env environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "openenv-core[core]>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m orchid_env.server.app
server = "orchid_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["orchid_env", "orchid_env.server"]
package-dir = { "orchid_env" = ".", "orchid_env.server" = "server" }
